// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XSS checks with disabled markdown-it-attrs & JavaScript includes 1`] = `<br size="&amp;{alert('XSS')}">`;

exports[`XSS checks with disabled markdown-it-attrs Anonymous HTML with style attribute 1`] = `""`;

exports[`XSS checks with disabled markdown-it-attrs Assuming you can only fit in a few characters and it filters against ".js" 1`] = `""`;

exports[`XSS checks with disabled markdown-it-attrs BASE tag 1`] = `""`;

exports[`XSS checks with disabled markdown-it-attrs BGSOUND 1`] = `""`;

exports[`XSS checks with disabled markdown-it-attrs Case insensitive XSS attack vector 1`] = `
<p>
  &lt;img src=JaVaScRiPt:alert('XSS')&gt;
</p>
`;

exports[`XSS checks with disabled markdown-it-attrs DIV background-image 1`] = `
<div>
</div>
`;

exports[`XSS checks with disabled markdown-it-attrs DIV background-image with unicoded XSS exploit 1`] = `
<div style="background-image:\\0075\\0072\\006C\\0028'\\006a\\0061\\0076\\0061\\0073\\0063\\0072\\0069\\0070\\0074\\003a\\0061\\006c\\0065\\0072\\0074\\0028.1027\\0058.1053\\0053\\0027\\0029'\\0029">
</div>
`;

exports[`XSS checks with disabled markdown-it-attrs DIV background-image with unicoded XSS exploit 2 1`] = `
<div>
</div>
`;

exports[`XSS checks with disabled markdown-it-attrs DIV expression 1`] = `
<div style="width:expression(alert('XSS'))">
</div>
`;

exports[`XSS checks with disabled markdown-it-attrs Decimal HTML character references 1`] = `<img>`;

exports[`XSS checks with disabled markdown-it-attrs Decimal HTML character references without trailing semicolons 1`] = `<img>`;

exports[`XSS checks with disabled markdown-it-attrs Default src tag by leaving it empty 1`] = `
<p>
  &lt;img src= onmouseover="alert('xxs')"&gt;
</p>
`;

exports[`XSS checks with disabled markdown-it-attrs Default src tag by leaving it out entirely 1`] = `<img>`;

exports[`XSS checks with disabled markdown-it-attrs Default src tag to get past filters that check src domain 1`] = `<img src="#">`;

exports[`XSS checks with disabled markdown-it-attrs Double open angle brackets 1`] = `""`;

exports[`XSS checks with disabled markdown-it-attrs Downlevel-Hidden block 1`] = `""`;

exports[`XSS checks with disabled markdown-it-attrs Embedded Encoded tab 1`] = `<img>`;

exports[`XSS checks with disabled markdown-it-attrs Embedded carriage return to break up XSS 1`] = `<img>`;

exports[`XSS checks with disabled markdown-it-attrs Embedded newline to break up XSS 1`] = `<img>`;

exports[`XSS checks with disabled markdown-it-attrs Embedded tab 1`] = `<img>`;

exports[`XSS checks with disabled markdown-it-attrs End title tag 1`] = `""`;

exports[`XSS checks with disabled markdown-it-attrs Escaping JavaScript escapes 1`] = `
<p>
  ";alert('XSS');//
</p>
`;

exports[`XSS checks with disabled markdown-it-attrs Grave accent obfuscation 1`] = `
<p>
  &lt;img src='javascript:alert("RSnake says, 'XSS'")'&gt;
</p>
`;

exports[`XSS checks with disabled markdown-it-attrs HTML entities 1`] = `
<p>
  &lt;img src=javascript:alert("XSS")&gt;
</p>
`;

exports[`XSS checks with disabled markdown-it-attrs Half open HTML/JavaScript XSS vector 1`] = `
<p>
  &lt;img src="javascript:alert('XSS')"
</p>
`;

exports[`XSS checks with disabled markdown-it-attrs Hexadecimal HTML character references without trailing semicolons 1`] = `<img>`;

exports[`XSS checks with disabled markdown-it-attrs Image XSS using the JavaScript directive 1`] = `<img>`;

exports[`XSS checks with disabled markdown-it-attrs List-style-image 1`] = `
<style>
</style>
<ul>
  <li>
    XSS
    <br>
  </li>
</ul>
`;

exports[`XSS checks with disabled markdown-it-attrs Livescript 1`] = `<img>`;

exports[`XSS checks with disabled markdown-it-attrs Local htc file 1`] = `""`;

exports[`XSS checks with disabled markdown-it-attrs Malformed A tags 1`] = `
<p>
  <a>
    xxs link
  </a>
</p>
`;

exports[`XSS checks with disabled markdown-it-attrs Malformed img tags 1`] = `
<p>
  &lt;img """&gt;"&gt;
</p>
`;

exports[`XSS checks with disabled markdown-it-attrs No Filter Evasion 1`] = `""`;

exports[`XSS checks with disabled markdown-it-attrs No closing script tags 1`] = `""`;

exports[`XSS checks with disabled markdown-it-attrs No quotes and no semicolon 1`] = `
<p>
  &lt;img src=javascript:alert('XSS')&gt;
</p>
`;

exports[`XSS checks with disabled markdown-it-attrs Non-alpha-non-digit XSS 1 1`] = `
<p>
  &lt;script/xss src="http://ha.ckers.org/xss.js"&gt;
</p>
`;

exports[`XSS checks with disabled markdown-it-attrs Non-alpha-non-digit XSS 2 1`] = `""`;

exports[`XSS checks with disabled markdown-it-attrs Non-alpha-non-digit XSS 3 1`] = `
<p>
  &lt;script/src="http://ha.ckers.org/xss.js"&gt;
</p>
`;

exports[`XSS checks with disabled markdown-it-attrs Non-alpha-non-digit XSS 4 1`] = `
<p>
  &lt;
</p>
`;

exports[`XSS checks with disabled markdown-it-attrs Null breaks up JavaScript directive 1`] = `
<p>
  perl -e 'print "&lt;img src=java�script:alert("XSS")&gt;";' &gt; out
</p>
`;

exports[`XSS checks with disabled markdown-it-attrs OBJECT tag 1`] = `
<p>
</p>
`;

exports[`XSS checks with disabled markdown-it-attrs PHP 1`] = `"alert(\\"XSS\\")'); ?&gt;"`;

exports[`XSS checks with disabled markdown-it-attrs Protocol resolution in script tags 1`] = `""`;

exports[`XSS checks with disabled markdown-it-attrs Remote style sheet 1`] = `""`;

exports[`XSS checks with disabled markdown-it-attrs Remote style sheet part 2 1`] = `
<style>
</style>
`;

exports[`XSS checks with disabled markdown-it-attrs Remote style sheet part 3 1`] = `""`;

exports[`XSS checks with disabled markdown-it-attrs Remote style sheet part 4 1`] = `
<style>
</style>
`;

exports[`XSS checks with disabled markdown-it-attrs SSI (Server Side Includes) 1`] = `""`;

exports[`XSS checks with disabled markdown-it-attrs Spaces and meta chars before the JavaScript in images for XSS 1`] = `<img>`;

exports[`XSS checks with disabled markdown-it-attrs TABLE 1`] = `
<table background="javascript:alert('XSS')">
</table>
`;

exports[`XSS checks with disabled markdown-it-attrs TD 1`] = `
<table>
  <tbody>
    <tr>
      <td background="javascript:alert('XSS')">
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`XSS checks with disabled markdown-it-attrs US-ASCII encoding 1`] = `
<p>
  ¼script¾alert(¢XSS¢)¼/script¾
</p>
`;

exports[`XSS checks with disabled markdown-it-attrs Using an EMBED tag you can embed a Flash movie that contains XSS 1`] = `
<p>
  &lt;embed src="http://ha.ckers.Using an EMBED tag you can embed a Flash movie that contains XSS. Click here for a demo. If you add the attributes allowScriptAccess="never" and allownetworking="internal" it can mitigate this risk (thank you to Jonathan Vanasco for the info).:org/xss.swf" AllowScriptAccess="always"&gt;
</p>
`;

exports[`XSS checks with disabled markdown-it-attrs VBscript in an image 1`] = `<img>`;

exports[`XSS checks with disabled markdown-it-attrs XML tag 1`] = `
<p>
</p>
`;

exports[`XSS checks with disabled markdown-it-attrs XSS Locator 1 1`] = `
<p>
  ';alert(String.fromCharCode(88,83,83))//';alert(String.fromCharCode(88,83,83))//";alert(String.fromCharCode(88,83,83))//";alert(String.fromCharCode(88,83,83))//--&gt;"&gt;'&gt;
</p>
`;

exports[`XSS checks with disabled markdown-it-attrs XSS locator 2 1`] = `
<p>
  '';!--"=&amp;{()}
</p>
`;

exports[`XSS checks with disabled markdown-it-attrs You can EMBED SVG which can contain your XSS vector 1`] = `
<p>
</p>
`;

exports[`XSS checks with disabled markdown-it-attrs body image 1`] = `""`;

exports[`XSS checks with disabled markdown-it-attrs body tag 1`] = `""`;

exports[`XSS checks with disabled markdown-it-attrs frame 1`] = `""`;

exports[`XSS checks with disabled markdown-it-attrs fromCharCode 1`] = `<img>`;

exports[`XSS checks with disabled markdown-it-attrs iframe 1`] = `
<iframe>
</iframe>
`;

exports[`XSS checks with disabled markdown-it-attrs iframe Event based 1`] = `
<iframe src="#">
</iframe>
`;

exports[`XSS checks with disabled markdown-it-attrs img Dynsrc 1`] = `<img>`;

exports[`XSS checks with disabled markdown-it-attrs img lowsrc 1`] = `<img>`;

exports[`XSS checks with disabled markdown-it-attrs img style with expression 1`] = `
<p>
  exp/
  <em>
    &lt;a style='no\\xss:noxss("
  </em>
  //*");
</p>
`;

exports[`XSS checks with disabled markdown-it-attrs img style with expression 2`] = `
<p>
  exp/
  <em>
    &lt;a style='no\\xss:noxss("
  </em>
  //*");
</p>
`;

exports[`XSS checks with disabled markdown-it-attrs input image 1`] = `<input type="image">`;

exports[`XSS checks with disabled markdown-it-attrs meta 1`] = `""`;

exports[`XSS checks with disabled markdown-it-attrs style sheet 1`] = `""`;

exports[`XSS checks with disabled markdown-it-attrs style tag 1`] = `""`;

exports[`XSS checks with disabled markdown-it-attrs style tag using background 1`] = `
<style type="text/css">
</style>
`;

exports[`XSS checks with disabled markdown-it-attrs style tag using background-image 1`] = `
<style>
  .xss {
  background-image: url("javascript:alert('XSS')");
}
</style>
<a class="XSS">
</a>
`;

exports[`XSS checks with disabled markdown-it-attrs style tags with broken up JavaScript for XSS 1`] = `
<style>
</style>
`;

exports[`XSS checks with disabled markdown-it-attrs style tags with broken up JavaScript for XSS part 2 1`] = `<img>`;

exports[`XSS checks with disabled markdown-it-attrs svg with style tag and foreignObject inside 1`] = `
<p>
  <svg>
    <style>
    </style>
  </svg>
</p>
`;

exports[`XSS checks with enabled markdown-it-attrs & JavaScript includes 1`] = `<br size="&amp;{alert('XSS')}">`;

exports[`XSS checks with enabled markdown-it-attrs Anonymous HTML with style attribute 1`] = `""`;

exports[`XSS checks with enabled markdown-it-attrs Assuming you can only fit in a few characters and it filters against ".js" 1`] = `""`;

exports[`XSS checks with enabled markdown-it-attrs BASE tag 1`] = `""`;

exports[`XSS checks with enabled markdown-it-attrs BGSOUND 1`] = `""`;

exports[`XSS checks with enabled markdown-it-attrs Case insensitive XSS attack vector 1`] = `
<p>
  &lt;img src=JaVaScRiPt:alert('XSS')&gt;
</p>
`;

exports[`XSS checks with enabled markdown-it-attrs DIV background-image 1`] = `
<div>
</div>
`;

exports[`XSS checks with enabled markdown-it-attrs DIV background-image with unicoded XSS exploit 1`] = `
<div style="background-image:\\0075\\0072\\006C\\0028'\\006a\\0061\\0076\\0061\\0073\\0063\\0072\\0069\\0070\\0074\\003a\\0061\\006c\\0065\\0072\\0074\\0028.1027\\0058.1053\\0053\\0027\\0029'\\0029">
</div>
`;

exports[`XSS checks with enabled markdown-it-attrs DIV background-image with unicoded XSS exploit 2 1`] = `
<div>
</div>
`;

exports[`XSS checks with enabled markdown-it-attrs DIV expression 1`] = `
<div style="width:expression(alert('XSS'))">
</div>
`;

exports[`XSS checks with enabled markdown-it-attrs Decimal HTML character references 1`] = `<img>`;

exports[`XSS checks with enabled markdown-it-attrs Decimal HTML character references without trailing semicolons 1`] = `<img>`;

exports[`XSS checks with enabled markdown-it-attrs Default src tag by leaving it empty 1`] = `
<p>
  &lt;img src= onmouseover="alert('xxs')"&gt;
</p>
`;

exports[`XSS checks with enabled markdown-it-attrs Default src tag by leaving it out entirely 1`] = `<img>`;

exports[`XSS checks with enabled markdown-it-attrs Default src tag to get past filters that check src domain 1`] = `<img src="#">`;

exports[`XSS checks with enabled markdown-it-attrs Double open angle brackets 1`] = `""`;

exports[`XSS checks with enabled markdown-it-attrs Downlevel-Hidden block 1`] = `""`;

exports[`XSS checks with enabled markdown-it-attrs Embedded Encoded tab 1`] = `<img>`;

exports[`XSS checks with enabled markdown-it-attrs Embedded carriage return to break up XSS 1`] = `<img>`;

exports[`XSS checks with enabled markdown-it-attrs Embedded newline to break up XSS 1`] = `<img>`;

exports[`XSS checks with enabled markdown-it-attrs Embedded tab 1`] = `<img>`;

exports[`XSS checks with enabled markdown-it-attrs End title tag 1`] = `""`;

exports[`XSS checks with enabled markdown-it-attrs Escaping JavaScript escapes 1`] = `
<p>
  ";alert('XSS');//
</p>
`;

exports[`XSS checks with enabled markdown-it-attrs Grave accent obfuscation 1`] = `
<p>
  &lt;img src='javascript:alert("RSnake says, 'XSS'")'&gt;
</p>
`;

exports[`XSS checks with enabled markdown-it-attrs HTML entities 1`] = `
<p>
  &lt;img src=javascript:alert("XSS")&gt;
</p>
`;

exports[`XSS checks with enabled markdown-it-attrs Half open HTML/JavaScript XSS vector 1`] = `
<p>
  &lt;img src="javascript:alert('XSS')"
</p>
`;

exports[`XSS checks with enabled markdown-it-attrs Hexadecimal HTML character references without trailing semicolons 1`] = `<img>`;

exports[`XSS checks with enabled markdown-it-attrs Image XSS using the JavaScript directive 1`] = `<img>`;

exports[`XSS checks with enabled markdown-it-attrs List-style-image 1`] = `
<style>
</style>
<ul>
  <li>
    XSS
    <br>
  </li>
</ul>
`;

exports[`XSS checks with enabled markdown-it-attrs Livescript 1`] = `<img>`;

exports[`XSS checks with enabled markdown-it-attrs Local htc file 1`] = `""`;

exports[`XSS checks with enabled markdown-it-attrs Malformed A tags 1`] = `
<p>
  <a>
    xxs link
  </a>
</p>
`;

exports[`XSS checks with enabled markdown-it-attrs Malformed img tags 1`] = `
<p>
  &lt;img """&gt;"&gt;
</p>
`;

exports[`XSS checks with enabled markdown-it-attrs No Filter Evasion 1`] = `""`;

exports[`XSS checks with enabled markdown-it-attrs No closing script tags 1`] = `""`;

exports[`XSS checks with enabled markdown-it-attrs No quotes and no semicolon 1`] = `
<p>
  &lt;img src=javascript:alert('XSS')&gt;
</p>
`;

exports[`XSS checks with enabled markdown-it-attrs Non-alpha-non-digit XSS 1 1`] = `
<p>
  &lt;script/xss src="http://ha.ckers.org/xss.js"&gt;
</p>
`;

exports[`XSS checks with enabled markdown-it-attrs Non-alpha-non-digit XSS 2 1`] = `""`;

exports[`XSS checks with enabled markdown-it-attrs Non-alpha-non-digit XSS 3 1`] = `
<p>
  &lt;script/src="http://ha.ckers.org/xss.js"&gt;
</p>
`;

exports[`XSS checks with enabled markdown-it-attrs Non-alpha-non-digit XSS 4 1`] = `
<p>
  &lt;
</p>
`;

exports[`XSS checks with enabled markdown-it-attrs Null breaks up JavaScript directive 1`] = `
<p>
  perl -e 'print "&lt;img src=java�script:alert("XSS")&gt;";' &gt; out
</p>
`;

exports[`XSS checks with enabled markdown-it-attrs OBJECT tag 1`] = `
<p>
</p>
`;

exports[`XSS checks with enabled markdown-it-attrs PHP 1`] = `"alert(\\"XSS\\")'); ?&gt;"`;

exports[`XSS checks with enabled markdown-it-attrs Protocol resolution in script tags 1`] = `""`;

exports[`XSS checks with enabled markdown-it-attrs Remote style sheet 1`] = `""`;

exports[`XSS checks with enabled markdown-it-attrs Remote style sheet part 2 1`] = `
<style>
</style>
`;

exports[`XSS checks with enabled markdown-it-attrs Remote style sheet part 3 1`] = `""`;

exports[`XSS checks with enabled markdown-it-attrs Remote style sheet part 4 1`] = `
<style>
</style>
`;

exports[`XSS checks with enabled markdown-it-attrs SSI (Server Side Includes) 1`] = `""`;

exports[`XSS checks with enabled markdown-it-attrs Spaces and meta chars before the JavaScript in images for XSS 1`] = `<img>`;

exports[`XSS checks with enabled markdown-it-attrs TABLE 1`] = `
<table background="javascript:alert('XSS')">
</table>
`;

exports[`XSS checks with enabled markdown-it-attrs TD 1`] = `
<table>
  <tbody>
    <tr>
      <td background="javascript:alert('XSS')">
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`XSS checks with enabled markdown-it-attrs US-ASCII encoding 1`] = `
<p>
  ¼script¾alert(¢XSS¢)¼/script¾
</p>
`;

exports[`XSS checks with enabled markdown-it-attrs Using an EMBED tag you can embed a Flash movie that contains XSS 1`] = `
<p>
  &lt;embed src="http://ha.ckers.Using an EMBED tag you can embed a Flash movie that contains XSS. Click here for a demo. If you add the attributes allowScriptAccess="never" and allownetworking="internal" it can mitigate this risk (thank you to Jonathan Vanasco for the info).:org/xss.swf" AllowScriptAccess="always"&gt;
</p>
`;

exports[`XSS checks with enabled markdown-it-attrs VBscript in an image 1`] = `<img>`;

exports[`XSS checks with enabled markdown-it-attrs XML tag 1`] = `
<p>
</p>
`;

exports[`XSS checks with enabled markdown-it-attrs XSS Locator 1 1`] = `
<p>
  ';alert(String.fromCharCode(88,83,83))//';alert(String.fromCharCode(88,83,83))//";alert(String.fromCharCode(88,83,83))//";alert(String.fromCharCode(88,83,83))//--&gt;"&gt;'&gt;
</p>
`;

exports[`XSS checks with enabled markdown-it-attrs XSS locator 2 1`] = `
<p>
  '';!--"=&amp;
</p>
`;

exports[`XSS checks with enabled markdown-it-attrs You can EMBED SVG which can contain your XSS vector 1`] = `
<p>
</p>
`;

exports[`XSS checks with enabled markdown-it-attrs body image 1`] = `""`;

exports[`XSS checks with enabled markdown-it-attrs body tag 1`] = `""`;

exports[`XSS checks with enabled markdown-it-attrs frame 1`] = `""`;

exports[`XSS checks with enabled markdown-it-attrs fromCharCode 1`] = `<img>`;

exports[`XSS checks with enabled markdown-it-attrs iframe 1`] = `
<iframe>
</iframe>
`;

exports[`XSS checks with enabled markdown-it-attrs iframe Event based 1`] = `
<iframe src="#">
</iframe>
`;

exports[`XSS checks with enabled markdown-it-attrs img Dynsrc 1`] = `<img>`;

exports[`XSS checks with enabled markdown-it-attrs img lowsrc 1`] = `<img>`;

exports[`XSS checks with enabled markdown-it-attrs img style with expression 1`] = `
<p>
  exp/
  <em>
    &lt;a style='no\\xss:noxss("
  </em>
  //*");
</p>
`;

exports[`XSS checks with enabled markdown-it-attrs img style with expression 2`] = `
<p>
  exp/
  <em>
    &lt;a style='no\\xss:noxss("
  </em>
  //*");
</p>
`;

exports[`XSS checks with enabled markdown-it-attrs input image 1`] = `<input type="image">`;

exports[`XSS checks with enabled markdown-it-attrs meta 1`] = `""`;

exports[`XSS checks with enabled markdown-it-attrs style sheet 1`] = `""`;

exports[`XSS checks with enabled markdown-it-attrs style tag 1`] = `""`;

exports[`XSS checks with enabled markdown-it-attrs style tag using background 1`] = `
<style type="text/css">
</style>
`;

exports[`XSS checks with enabled markdown-it-attrs style tag using background-image 1`] = `
<style>
  .xss {
  background-image: url("javascript:alert('XSS')");
}
</style>
<a class="XSS">
</a>
`;

exports[`XSS checks with enabled markdown-it-attrs style tags with broken up JavaScript for XSS 1`] = `
<style>
</style>
`;

exports[`XSS checks with enabled markdown-it-attrs style tags with broken up JavaScript for XSS part 2 1`] = `<img>`;

exports[`XSS checks with enabled markdown-it-attrs svg with style tag and foreignObject inside 1`] = `
<p>
  <svg>
    <style>
    </style>
  </svg>
</p>
`;
